--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.32.0",
     "framer-motion": "^4.1.17",
     "graphql": "^16.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
-    "recharts": "^2.1.8",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
